# fincrime_thedesk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  phase1a_prereq.txt  phase1a_verification.txt
client/: FinCrime.csproj  project.godot
core/: Cargo.toml  recon_test_output.txt
core/src/: aml_screening_subsystem.rs  card_dispute_subsystem.rs  churn_subsystem.rs  clock.rs  command.rs  complaint_analytics_subsystem.rs  complaint_subsystem.rs  config.rs  customer_subsystem.rs  economics_subsystem.rs  engine.rs  error.rs  event.rs  fraud_detection_subsystem.rs  incident_subsystem.rs  lib.rs  macro_subsystem.rs  name_generator.rs  offer_subsystem.rs  ops_specialist_role.rs  payment_hub_subsystem.rs  pricing_subsystem.rs  reconciliation_subsystem.rs  regulatory_exam_subsystem.rs  reputation_subsystem.rs  risk_appetite_subsystem.rs  rng.rs  snapshot.rs  store.rs  subsystem.rs  transaction_monitoring_subsystem.rs  transaction_subsystem.rs  types.rs
core/src/store/: account.rs  business.rs  churn.rs  complaint.rs  compliance.rs  customer.rs  customer_identity.rs  incident.rs  mod.rs  offer.rs  payment_hub.rs  reconciliation.rs  regulatory_exam.rs  reputation.rs
core/tests/: business_entity.rs  card_disputes.rs  churn_model.rs  complaint_analytics.rs  complaints.rs  custodial_trust.rs  customer_identity.rs  determinism.rs  economics.rs  incident.rs  offers.rs  payment_hub.rs  population.rs  pricing.rs  reconciliation.rs  regulatory_exam.rs  reputation.rs  risk_appetite.rs  risk_scoring.rs  segment_profitability.rs
tools/: Cargo.toml
tools/src/: lib.rs  main.rs
(+61 files in other folders)
