[workspace]
members = ["core", "tools"]
resolver = "2"

[workspace.dependencies]
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
rand       = "0.8"
rand_pcg   = "0.3"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
thiserror  = "1"
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
